  payloads are now ordered by integer value rather than lexicographically.

- Issue #6163: Fixed HP-UX runtime library dir options in
  distutils.unixcompiler. Initial patch by Sridhar Ratnakumar and
  Michael Haubenwallner.

Extension Modules
-----------------

- Issue #7078: Set struct.__doc__ from _struct.__doc__.

- Issue #6848: Fix curses module build failure on OS X 10.6.

Tests
-----

- Issue #7055: test___all__ now greedily detects all modules which have an
  __all__ attribute, rather than using a hardcoded and incomplete list.

- Issue #7058: Added save/restore for argv and os.environ to runtest_inner
  in regrtest, with warnings if the called test modifies them.

- Issue #7042: Fix test_signal (test_itimer_virtual) failure on OS X 10.6.

Build
-----

- Issue #6603: Change READ_TIMESTAMP macro in ceval.c so that it
  compiles correctly under gcc on x86-64.  This fixes a reported
  problem with the --with-tsc build on x86-64.

- Issue #6802: Fix build issues on MacOSX 10.6

- Issue #6801 : symmetric_difference_update also accepts |.
  Thanks to Carl Chenet. 

Documentation
-------------

- Issue #6556: Fixed the Distutils configuration files location explanation
  for Windows.


What's New in Python 3.1.1?
===========================

*Release date: 2009-08-13*

Core and Builtins
-----------------

- Issue #6707: dir() on an uninitialized module caused a crash.

- Issue #6540: Fixed crash for bytearray.translate() with invalid parameters.

- Issue #6573: set.union() stopped processing inputs if an instance of self
  occurred in the argument chain.

- Issue #6070: On posix platforms import no longer copies the execute bit
  from the .py file to the .pyc file if it is set.

- Issue #6428: Since Python 3.0, the __bool__ method must return a bool
  object, and not an int.  Fix the corresponding error message, and the
  documentation.

- Issue #6347: Include inttypes.h as well as stdint.h in pyport.h.